# FullStack_proj

./: .gitignore  .replit  DOCKER_SETUP.md  Dockerfile  PYCHARM_SETUP.md  PyCharm-Setup.md  README-Docker.md  README.md  database.py  demo_resume_optimization.py  docker-cleanup.sh  docker-compose.yml  docker-requirements.txt  integration_test.py  main.py  package-lock.json  package.json  pyproject.toml  replit.md  requirements.txt  sample_architecture_resume.md  test_adzuna.py
app/: main.py  requirements.txt  unit_tests.py
app/backend/: Dockerfile  auth.py  database.py  requirements.txt
app/frontend/: Dockerfile  nginx.conf  package.json
attached_assets/: Pasted-Thank-you-for-sharing-the-README-md-content-Here-s-a-detailed-review-with-suggestions-to-enhance-cl-1750434025030_1750434025031.txt  Pasted-Traceback-most-recent-call-last-File-usr-local-bin-uvicorn-line-8-in-module-sys-ex-1750451462437_1750451462439.txt  Pasted-Your-Dockerfile-looks-well-structured-and-follows-good-practices-like-Using-a-slim-Python-image-I-1750437130697_1750437130697.txt  Pasted-docker-compose-up-build-time-2025-06-20T23-54-26-03-00-level-warning-msg-C-Users-shong-Pyc-1750452984372_1750452984373.txt  Pasted-docker-run-p-8000-8000-proj-backend-INFO-Started-server-process-1-INFO-Waiting-for-ap-1750452724889_1750452724890.txt
routers/: services.py
services/: arbeitnow_api.py  company_data_api.py  free_resume_optimizer.py  google_jobs_api.py  jsearch_api.py  linkedin_scraper.py  openai_resume_optimizer.py  resume_optimizer.py  scrapingdog_linkedin.py
static/: index.html
(+18 files in other folders)
