[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "django-routers>=0.2",
    "fastapi>=0.115.13",
    "httpx>=0.25.0",
    "passlib>=1.7.4",
    "psycopg2-binary>=2.9.0",
    "pydantic>=2.11.7",
    "pyjwt>=2.10.1",
    "pytest>=8.4.1",
    "python-jose[cryptography]>=3.3.0",
    "python-multipart>=0.0.6",
    "requests>=2.31.0",
    "sqlalchemy>=2.0.41",
    "uvicorn>=0.34.3",
]
